verndor remove and shop enhanced
