# backend/src/models/shop.ts
@@ -5,7 +5,8 @@ export interface IShop extends mongoose.Document {
     // id: number;
     name: string;
     vendorName: string;
-    productsList : number[];
+    vendorEmai: string;
+    vendorPhoneNumber: string;
     timestamp: number;
     image?: string;
     additionalData?: string;
@@ -16,7 +17,8 @@ const shopSchema = new mongoose.Schema<IShop>(
         // id: { type: Number, required: true },
         name: { type: String, required: true },
         vendorName: { type: String, required: true },
-        productsList: { type: [Number], required: true },
+        vendorEmai: { type: String, required: true },
+        vendorPhoneNumber: { type: String, required: true },
         timestamp: { type: Number, required: true },
         image: { type: String, required: false },
         additionalData: { type: String, required: false },
@@ -28,7 +30,7 @@ const shopSchema = new mongoose.Schema<IShop>(
 );
 
 shopSchema.index({ name: 1 }, { unique: true });
-shopSchema.index({ vendorName: 1 });
+// shopSchema.index({ vendorName: 1 });
 shopSchema.index({ timestamp: -1 });
 
 shopSchema.set('toJSON', {
